--- a/locales/ru/contact.json
+++ b/locales/ru/contact.json
@@ -1,3 +1,8 @@
 {
-    "title" : "Контакт"
+    "title" : "Контакт",
+    "input_name": "Name",
+    "input_company": "company",
+    "input_quantity": "quantity",
+    "input_firmBID": "firm bid",
+    "input_message": "message"
   }
