--- a/locales/en/contact.json
+++ b/locales/en/contact.json
@@ -1,3 +1,8 @@
 {
-    "title" : "Contact"
+    "title" : "Contact",
+    "input_name": "Name",
+    "input_company": "company",
+    "input_quantity": "quantity",
+    "input_firmBID": "firm bid",
+    "input_message": "message"
   }
