--- a/locales/en/products.json
+++ b/locales/en/products.json
@@ -1,5 +1,11 @@
 {
     "title" : "Products",
     "type_organic": "Organic",
-    "type_conventional": "Conventional"
+    "type_conventional": "Conventional",
+    "contact_title" : "Contact",
+    "input_name": "Name",
+    "input_company": "company",
+    "input_quantity": "quantity",
+    "input_firmBID": "firm bid",
+    "input_message": "message"
   }
