--- a/locales/ru/products.json
+++ b/locales/ru/products.json
@@ -1,5 +1,11 @@
 {
     "title" : "Продукты",
     "type_organic": "Органический",
-    "type_conventional": "Традиционный"
+    "type_conventional": "Традиционный",
+    "contact_title" : "Контакт",
+    "input_name": "Name",
+    "input_company": "company",
+    "input_quantity": "quantity",
+    "input_firmBID": "firm bid",
+    "input_message": "message"
   }
